<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/timeA_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamA"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/timeA_placar"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeB_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamB"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/timeB_placar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeA_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/timeA_3pontos_btn"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeA_nome" />

    <TextView
        android:id="@+id/timeB_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/timeB_3pontos_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/timeB_nome" />

    <Button
        android:id="@+id/timeA_3pontos_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/three_points"
        app:layout_constraintBottom_toTopOf="@+id/timeA_2pontos_btn"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeA_placar" />

    <Button
        android:id="@+id/timeB_3pontos_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/three_points"
        app:layout_constraintBottom_toTopOf="@+id/timeB_2pontos_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/timeB_placar" />

    <Button
        android:id="@+id/timeA_2pontos_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/two_points"
        app:layout_constraintBottom_toTopOf="@+id/timeA_1ponto_btn"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeA_3pontos_btn" />

    <Button
        android:id="@+id/timeB_2pontos_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/two_points"
        app:layout_constraintBottom_toTopOf="@+id/timeB_1ponto_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/timeB_3pontos_btn" />

    <Button
        android:id="@+id/timeA_1ponto_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/one_points"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeA_2pontos_btn" />

    <Button
        android:id="@+id/timeB_1ponto_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/one_points"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/timeB_2pontos_btn" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />
</androidx.constraintlayout.widget.ConstraintLayout>